[package]
name = "pesto"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "High-performance sFlow v5 collector"
repository = "https://github.com/nxthdr/pesto"
homepage = "https://nxthdr.dev"
keywords = ["sflow", "collector"]
exclude = [
    ".github/*",
    "integration/*",
    "renovate.json",
]

[dependencies]
anyhow = "1.0"
bincode = "2.0"
bytes = "1.9"
capnp = "0.23"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
etherparse = "0.16"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
rdkafka = { version = "0.38", features = ["ssl", "sasl"] }
serde = { version = "1.0", features = ["derive"] }
sflow-parser = { version = "0.4.2", features = ["serde"] }
tokio = { version = "1.42", features = ["full"] }
tokio-graceful = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
capnpc = "0.23"
